--- a/settings.ini
+++ b/settings.ini
@@ -7,8 +7,8 @@ lib_name = gfparser
 # company_name = nike
 
 user = nmarincic
-# description = A description of your project
-# keywords = some keywords
+description = Pulls useful information from the web helping you make flashcards for learning the German language
+keywords = german learning python flashcards anki wiktionary deutsch forvo 
 author = Nikola Marincic
 author_email = nikola.marincic@gmail.com
 copyright = Nikola Marincic
